@@ -947,8 +947,11 @@ enum {
 	UNT_SUITON = 0xbb,
 	UNT_TATAMIGAESHI,
 	UNT_KAENSIN,
-	//0xbe, 0xc0, 0xc1 //Maybe the other elements of Ground Drift?
-	UNT_GROUNDDRIFT = 0xc2,
+	UNT_GROUNDDRIFT_WIND,
+	UNT_GROUNDDRIFT_DARK,
+	UNT_GROUNDDRIFT_POISON,
+	UNT_GROUNDDRIFT_WATER,
+	UNT_GROUNDDRIFT_FIRE,
 };
 
 #endif
